fix: responsive broken on mobile view

--- a/src/scss/pages/_learn.scss
+++ b/src/scss/pages/_learn.scss
@@ -2,6 +2,7 @@
   .card[data-style=branded] {
     min-height: 25.625rem;
     max-width: 37rem;
+    min-width: auto;
   }
 }
 
